<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        app:srcCompat="@drawable/logo_eat_it" />

    <TextView
        android:layout_width="200dp"
        android:layout_height="43dp"
        android:layout_gravity="center"
        android:textStyle="italic"
        android:text="@string/string"
        android:textColor="@android:color/background_light">

    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <EditText
        android:id="@+id/tv_email"
        android:layout_width="273dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/button3"
        android:hint="@string/hintsname"
        android:text=""
        android:layout_gravity="center"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textColorHint="#000000" />

        <EditText
            android:id="@+id/tv_password"
            android:layout_width="273dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/button3"
            android:hint="@string/hintspassword"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textColorHint="#000000" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <CheckBox
        android:id="@+id/cb_save"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/my_background"
        android:checked="false"
        android:text="RememberMe" />

    <CheckBox
        android:id="@+id/cb_atuo_login"
        android:layout_width="154dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/my_background"
        android:checked="false"
        android:text="AutoLogin" />
    </LinearLayout>
    <android.widget.Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:textColor="#000000"
        android:background="@drawable/button2"
        android:text="@string/singup" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="@android:dimen/app_icon_size"
        >

        <TextView
            android:id="@+id/forgetpassword"
            android:layout_width="168dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="35dp"
            android:background="@drawable/button3"
            android:text="@string/forget"
            android:textAlignment="center"
            android:textColor="#000000">

        </TextView>

        <TextView
            android:id="@+id/sing_in"
            android:layout_width="172dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="35dp"
            android:background="@drawable/button3"
            android:text="@string/signin"
            android:textAlignment="center"
            android:textColor="#000000">

        </TextView>

    </LinearLayout>

</LinearLayout>