<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context=".RegistrationActivity">

    <ImageView
        android:id="@+id/imag_view"
        android:layout_width="280dp"
        android:layout_height="280dp"
        android:layout_gravity="center"
        app:srcCompat="@drawable/logo_eat_it" />
    <TextView
        android:layout_width="280dp"
        android:layout_gravity="center"
        android:text="@string/string"
        android:textColor="@android:color/white"
        android:layout_height="wrap_content">

    </TextView>

    <EditText
        android:id="@+id/et_name"
        android:layout_width="230dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/button3"
        android:ems="10"
        android:hint="User Name"
        android:inputType="textPersonName"
        android:text=""
        android:textAlignment="center"
        android:textColorHint="#000000" />

    <EditText
        android:id="@+id/ed_email_phn"
        android:layout_width="230dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textAlignment="center"
        android:hint="Email or Phone"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textColorHint="#000000"
        android:background="@drawable/button3"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/pass"
        android:layout_width="230dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Password"
        android:textAlignment="center"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:textColorHint="#000000"
        android:background="@drawable/button3"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/con_pass"
        android:layout_width="230dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Confirm Password"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textColorHint="#000000"
        android:textAlignment="center"
        android:background="@drawable/button3"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btn_register"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColorHint="#000000"
        android:textColor="#000000"
        android:textAlignment="center"
        android:background="@drawable/button"
        android:text="@string/Register" />

    <TextView
        android:id="@+id/have_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/button2"
        android:text="@string/haveAccount"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textColorHint="#000000" />
</LinearLayout>